Agentforce/force-app/main/default/objects/Perception_History__c/Perception_History__c.object-meta.xml
<CustomObject>
    <description>Custom Object to track Perception of NPS Surveys</description>
    <label>Perception History</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perception History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>