Agentforce/force-app/main/default/objects/Perception_History__c/fields/Perception__c.field-meta.xml
<CustomField>
    <fullName>Perception__c</fullName>
    <label>Perception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NPS_Survey_Category</valueSetName>
    </valueSet>
</CustomField>